<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_story.AddStoryActivity">

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <com.google.android.material.appbar.MaterialToolbar-->
    <!--            android:id="@+id/topAppBar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:minHeight="?attr/actionBarSize"-->
    <!--            app:title="@string/create_new_story"-->
    <!--            app:layout_scrollFlags="scroll|enterAlways|snap" />-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/swipe_stories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:maxLines="8"
                android:hint="@string/description"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_location_with_my_location"
                app:layout_constraintTop_toBottomOf="@id/ed_add_description"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/image_container" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_preview"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:contentDescription="@string/story_image"
                    android:src="@drawable/ic_place_holder"
                    tools:ignore="ImageContrastCheck" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.Material3.BottomAppBar"
        app:menu="@menu/story_menu" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_upload_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:text="@string/post"
        app:icon="@drawable/ic_send"
        app:layout_anchor="@id/bottomAppBar" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>